# decision-agent/agent-backend/agent-factory/src/driveradapter/api/httphandler/agentconfighandler/define.go
@@ -19,9 +19,10 @@ type daConfHTTPHandler struct {
 }
 
 func (h *daConfHTTPHandler) RegPubRouter(router *gin.RouterGroup) {
-	router.POST("/agent", h.Create)          // 新建agent
-	router.PUT("/agent/:agent_id", h.Update) // 编辑agent
-	router.GET("/agent/:agent_id", h.Detail) // 获取agent详情
+	router.POST("/agent", h.Create)            // 新建agent
+	router.POST("/agent/react", h.CreateReact) // 新建react agent
+	router.PUT("/agent/:agent_id", h.Update)   // 编辑agent
+	router.GET("/agent/:agent_id", h.Detail)   // 获取agent详情
 	// router.GET("/agent", h.AgentList)        // agent列表
 
 	router.GET("/agent/by-key/:key", h.DetailByKey) // 获取agent详情 by key
